edit: up to pytorch

--- a/Assignment_2_Intro_to_Numpy_and_Pytorch_for_Deep_Learning.ipynb
+++ b/Assignment_2_Intro_to_Numpy_and_Pytorch_for_Deep_Learning.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "PxCKwrGTa_mi"
       },
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "Wsy2sMHjbC8I"
       },
@@ -128,9 +128,9 @@
           "text": [
             "Results match: True\n",
             "Processing 1,000,000 data points:\n",
-            "Python list method: 0.0588 seconds\n",
-            "NumPy array method:  0.0022 seconds\n",
-            "NumPy is 27.0x faster!\n"
+            "Python list method: 0.0654 seconds\n",
+            "NumPy array method:  0.0031 seconds\n",
+            "NumPy is 21.2x faster!\n"
           ]
         }
       ],
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "NoFDQ6cbjX3Y"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "4375-YA5kJD3"
       },
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "k6TAOJclmAh2"
       },
@@ -503,7 +503,7 @@
             "    work_shifts = [[100 101 102 103 104 105 106 107]\n",
             " [108 109 110 111 112 113 114 115]\n",
             " [116 117 118 119 120 121 122 123]]\n",
-            "    daily_blocks_T = [[100 106 112 118]\n",
+            "    time_blocks = [[100 106 112 118]\n",
             " [101 107 113 119]\n",
             " [102 108 114 120]\n",
             " [103 109 115 121]\n",
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "id": "gDm7nyMovR-T"
       },
@@ -766,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "id": "bse15dZz0_tC"
       },
@@ -822,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {
         "id": "AdC2XqCM1Nt3"
       },
@@ -832,11 +832,11 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "    mean of baseline: 49.60936262376077\n",
-            "    std of baseline: 2.0010311872723894\n",
+            "    mean of baseline: 49.932215292533314\n",
+            "    std of baseline: 2.4418051710553206\n",
             "    \n",
-            "    mean of noisy: 48.833025416468665\n",
-            "    std of noisy: 4.111616076217178\n",
+            "    mean of noisy: 50.68383777427084\n",
+            "    std of noisy: 5.778954637970482\n",
             "\n"
           ]
         }
@@ -897,7 +897,47 @@
       "metadata": {
         "id": "iufE66H12CYK"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Raw sensor data shape: (5, 24)\n",
+            "\n",
+            "Sample of raw data (first 3 sensors, first 8 hours):\n",
+            " [[  99.35705998 -999.           87.30733964  102.77840922  105.03877585\n",
+            "    91.62851414  112.02120471   88.77573399]\n",
+            " [ 112.66113866   88.48585907 -999.          108.94645488   95.31168713\n",
+            "   113.53553067   90.94643751   87.10452373]\n",
+            " [-999.          101.91907552   88.35547473   96.28656179  120.78225393\n",
+            "    79.3513176    97.82388864   95.03824463]]\n",
+            "\n",
+            "==================================================\n",
+            "SENSOR EXPERIMENT SUMMARY REPORT\n",
+            "==================================================\n",
+            "\n",
+            "Sensor Reliability (% valid readings):\n",
+            "  Sensor 0: 91.7%\n",
+            "  Sensor 1: 83.3%\n",
+            "  Sensor 2: 91.7%\n",
+            "  Sensor 3: 87.5%\n",
+            "  Sensor 4: 95.8%\n",
+            "\n",
+            "Sensor Averages:\n",
+            "  Sensor 0: 98.47\n",
+            "  Sensor 1: 97.93\n",
+            "  Sensor 2: 100.15\n",
+            "  Sensor 3: 101.13\n",
+            "  Sensor 4: 100.04\n",
+            "\n",
+            "Highest avg sensor: Sensor 3 (101.13)\n",
+            "Lowest avg sensor: Sensor 1 (97.93)\n",
+            "\n",
+            "Hours where avg exceeded 110: []\n",
+            "Correlation between Sensor 0 and Sensor 1: -0.2137\n"
+          ]
+        }
+      ],
       "source": [
         "# The facility has collected data from a multi-sensor experiment\n",
         "# 5 sensors, 24 hour periods, with some data quality issues\n",
@@ -914,20 +954,44 @@
         "print(\"Raw sensor data shape:\", sensor_data.shape)\n",
         "print(\"\\nSample of raw data (first 3 sensors, first 8 hours):\\n\", sensor_data[:3, :8])\n",
         "\n",
-        "# TODO: Clean the data by replacing -999 values with the mean of valid readings for each sensor\n",
+        "# Clean the data by replacing -999 values with the mean of valid readings for each sensor\n",
+        "cleaned_data = sensor_data.copy()\n",
+        "for i in range(cleaned_data.shape[0]):\n",
+        "    valid_mask = cleaned_data[i] != -999\n",
+        "    sensor_mean = cleaned_data[i][valid_mask].mean()\n",
+        "    cleaned_data[i][~valid_mask] = sensor_mean\n",
         "\n",
-        "# TODO: Calculate hourly averages across all sensors (24 values)\n",
+        "# Calculate hourly averages across all sensors (24 values)\n",
+        "hourly_averages = cleaned_data.mean(axis=0)\n",
         "\n",
-        "# TODO: Calculate sensor reliability (percentage of valid readings per sensor)\n",
+        "# Calculate sensor reliability (percentage of valid readings per sensor)\n",
+        "sensor_reliability = (sensor_data != -999).sum(axis=1) / sensor_data.shape[1] * 100\n",
         "\n",
-        "# TODO: Find the sensor with highest and lowest average readings\n",
+        "# Find the sensor with highest and lowest average readings\n",
+        "sensor_averages = cleaned_data.mean(axis=1)\n",
+        "highest_sensor = np.argmax(sensor_averages)\n",
+        "lowest_sensor = np.argmin(sensor_averages)\n",
         "\n",
-        "# TODO: Identify hours where average readings exceeded 110\n",
+        "# Identify hours where average readings exceeded 110\n",
+        "high_hours = np.where(hourly_averages > 110)[0]\n",
         "\n",
-        "# TODO: Calculate the correlation between sensor 0 and sensor 1 (using valid data only)\n",
-        "# Hint: Use np.corrcoef to calculate the coefficient and make sure to extract the correct value from the output array\n",
+        "# Calculate the correlation between sensor 0 and sensor 1 (using valid data only)\n",
+        "correlation = np.corrcoef(cleaned_data[0], cleaned_data[1])[0, 1]\n",
         "\n",
-        "# TODO: Create a summary report printing all findings\n"
+        "# Create a summary report printing all findings ( better formatting than before! :) )\n",
+        "print(f\"\\n{'='*50}\")\n",
+        "print(\"SENSOR EXPERIMENT SUMMARY REPORT\")\n",
+        "print(f\"{'='*50}\")\n",
+        "print(f\"\\nSensor Reliability (% valid readings):\")\n",
+        "for i in range(5):\n",
+        "    print(f\"  Sensor {i}: {sensor_reliability[i]:.1f}%\")\n",
+        "print(f\"\\nSensor Averages:\")\n",
+        "for i in range(5):\n",
+        "    print(f\"  Sensor {i}: {sensor_averages[i]:.2f}\")\n",
+        "print(f\"\\nHighest avg sensor: Sensor {highest_sensor} ({sensor_averages[highest_sensor]:.2f})\")\n",
+        "print(f\"Lowest avg sensor: Sensor {lowest_sensor} ({sensor_averages[lowest_sensor]:.2f})\")\n",
+        "print(f\"\\nHours where avg exceeded 110: {high_hours}\")\n",
+        "print(f\"Correlation between Sensor 0 and Sensor 1: {correlation:.4f}\")"
       ]
     },
     {
