--- a/Assignment_2_Intro_to_Numpy_and_Pytorch_for_Deep_Learning.ipynb
+++ b/Assignment_2_Intro_to_Numpy_and_Pytorch_for_Deep_Learning.ipynb
@@ -893,7 +893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "iufE66H12CYK"
       },
@@ -905,36 +905,36 @@
             "Raw sensor data shape: (5, 24)\n",
             "\n",
             "Sample of raw data (first 3 sensors, first 8 hours):\n",
-            " [[  99.35705998 -999.           87.30733964  102.77840922  105.03877585\n",
-            "    91.62851414  112.02120471   88.77573399]\n",
-            " [ 112.66113866   88.48585907 -999.          108.94645488   95.31168713\n",
-            "   113.53553067   90.94643751   87.10452373]\n",
-            " [-999.          101.91907552   88.35547473   96.28656179  120.78225393\n",
-            "    79.3513176    97.82388864   95.03824463]]\n",
+            " [[ 108.69702882  100.92735902   74.47773334   93.64557974  109.66153495\n",
+            "   100.837086   -999.          108.04353286]\n",
+            " [ 102.87485477   97.0384828    80.08526936   97.06188249   97.38480053\n",
+            "   103.55307926 -999.          102.9278009 ]\n",
+            " [ 110.46148978   99.23769029   94.69636197   76.83313871   83.96640686\n",
+            "   114.07922364   92.16945349   91.59345011]]\n",
             "\n",
             "==================================================\n",
             "SENSOR EXPERIMENT SUMMARY REPORT\n",
             "==================================================\n",
             "\n",
             "Sensor Reliability (% valid readings):\n",
-            "  Sensor 0: 91.7%\n",
-            "  Sensor 1: 83.3%\n",
-            "  Sensor 2: 91.7%\n",
-            "  Sensor 3: 87.5%\n",
-            "  Sensor 4: 95.8%\n",
+            "  Sensor 0: 87.5%\n",
+            "  Sensor 1: 91.7%\n",
+            "  Sensor 2: 87.5%\n",
+            "  Sensor 3: 91.7%\n",
+            "  Sensor 4: 91.7%\n",
             "\n",
             "Sensor Averages:\n",
-            "  Sensor 0: 98.47\n",
-            "  Sensor 1: 97.93\n",
-            "  Sensor 2: 100.15\n",
-            "  Sensor 3: 101.13\n",
-            "  Sensor 4: 100.04\n",
+            "  Sensor 0: 98.92\n",
+            "  Sensor 1: 98.06\n",
+            "  Sensor 2: 99.03\n",
+            "  Sensor 3: 99.78\n",
+            "  Sensor 4: 103.63\n",
             "\n",
-            "Highest avg sensor: Sensor 3 (101.13)\n",
-            "Lowest avg sensor: Sensor 1 (97.93)\n",
+            "Highest avg sensor: Sensor 4 (103.63)\n",
+            "Lowest avg sensor: Sensor 1 (98.06)\n",
             "\n",
             "Hours where avg exceeded 110: []\n",
-            "Correlation between Sensor 0 and Sensor 1: -0.2137\n"
+            "Correlation between Sensor 0 and Sensor 1: 0.3120\n"
           ]
         }
       ],
@@ -1018,11 +1018,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "KweXDl_WLdYY"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "PyTorch version: 2.10.0\n"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "\n",
@@ -1044,11 +1052,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "XpMp7EbeLr7n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Scalar shape: torch.Size([])\n",
+            "Vector shape: torch.Size([3])\n",
+            "Matrix shape: torch.Size([2, 2])\n",
+            "\n",
+            "Neural weights shape: torch.Size([3, 4])\n",
+            "Neural biases shape: torch.Size([4])\n"
+          ]
+        }
+      ],
       "source": [
         "# Creating tensors\n",
         "scalar_tensor = torch.tensor(42.0)                    # 0D tensor (scalar)\n",
@@ -1097,11 +1118,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "lbl2ZQh_L-Vb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Weights require grad: True\n",
+            "Initial weight values:\n",
+            "tensor([[ 0.3559, -0.6866, -0.4934,  0.2415, -1.1109],\n",
+            "        [ 0.0915, -2.3169, -0.2168, -0.3097, -0.3957],\n",
+            "        [ 0.8034, -0.6216, -0.5920, -0.0631, -0.8286]])\n",
+            "\n",
+            "Updated biases: tensor([0.1000, 0.2000, 0.3000, 0.4000, 0.5000])\n"
+          ]
+        }
+      ],
       "source": [
         "from torch import nn #Note we import nn (Neural Network) from PyTorch\n",
         "\n",
@@ -1144,11 +1180,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "GoTj1XQyMzoo"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Input shape: torch.Size([32, 100])\n",
+            "Hidden layer output shape: torch.Size([32, 64])\n",
+            "Final output shape: torch.Size([32, 10])\n",
+            "\n",
+            "Hidden layer weights shape: torch.Size([64, 100])\n",
+            "Hidden layer bias shape: torch.Size([64])\n"
+          ]
+        }
+      ],
       "source": [
         "# Linear (fully connected) layers\n",
         "hidden_layer = nn.Linear(in_features=100, out_features=64)\n",
@@ -1189,23 +1239,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "m0GvsYgmNniN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Input weights shape: torch.Size([784, 128])\n",
+            "After input layer shape: torch.Size([128, 64])\n",
+            "After hidden layer shape: torch.Size([128, 32])\n",
+            "After dropout shape: torch.Size([128, 32])\n",
+            "After output layer shape: torch.Size([128, 3])\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Create input_weights - a Variable with random normal values and shape (784, 128)\n",
+        "# Created input_weights - a Parameter with random normal values and shape (784, 128)\n",
+        "input_weights = nn.Parameter(torch.randn(784, 128))\n",
         "\n",
-        "# TODO: Create input_layer - Dense layer with 64 units, activation='relu'\n",
+        "# Created input_layer - Dense layer with 64 units, activation='relu'\n",
+        "input_layer = nn.Linear(784, 64)\n",
+        "input_relu = nn.ReLU()\n",
         "\n",
-        "# TODO: Create hidden_layer - Dense layer with 32 units, activation='relu'\n",
+        "# Created hidden_layer - Dense layer with 32 units, activation='relu'\n",
+        "hidden_layer = nn.Linear(64, 32)\n",
+        "hidden_relu = nn.ReLU()\n",
         "\n",
-        "# TODO: Create dropout - Dropout layer with rate=0.3\n",
+        "# Created dropout - Dropout layer with rate=0.3\n",
+        "dropout = nn.Dropout(p=0.3)\n",
         "\n",
-        "# TODO: Create output_layer - Dense layer with 3 units, activation='softmax'\n",
         "\n",
-        "# TODO: Process input_weights through all layers and print shapes at each step\n"
+        "# Created output_layer - Dense layer with 3 units, activation='softmax'\n",
+        "output_layer = nn.Linear(32, 3)\n",
+        "output_softmax = nn.Softmax(dim=1)\n",
+        "\n",
+        "# Processed input_weights through all layers and print shapes at each step\n",
+        "print(\"Input weights shape:\", input_weights.shape)\n",
+        "\n",
+        "# Through input layer\n",
+        "x = input_layer(input_weights.T)  # Transpose to match (batch, features)\n",
+        "x = input_relu(x)\n",
+        "print(\"After input layer shape:\", x.shape)\n",
+        "\n",
+        "# Through hidden layer\n",
+        "x = hidden_layer(x)\n",
+        "x = hidden_relu(x)\n",
+        "print(\"After hidden layer shape:\", x.shape)\n",
+        "\n",
+        "# Through dropout\n",
+        "x = dropout(x)\n",
+        "print(\"After dropout shape:\", x.shape)\n",
+        "\n",
+        "# Through output layer\n",
+        "x = output_layer(x)\n",
+        "x = output_softmax(x)\n",
+        "print(\"After output layer shape:\", x.shape)\n"
       ]
     },
     {
@@ -1242,11 +1333,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "AqE7CEM2Oak8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Classification Model Summary:\n",
+            "Sequential(\n",
+            "  (0): Linear(in_features=784, out_features=128, bias=True)\n",
+            "  (1): ReLU()\n",
+            "  (2): Dropout(p=0.3, inplace=False)\n",
+            "  (3): Linear(in_features=128, out_features=64, bias=True)\n",
+            "  (4): ReLU()\n",
+            "  (5): Linear(in_features=64, out_features=2, bias=True)\n",
+            "  (6): Softmax(dim=1)\n",
+            ")\n",
+            "\n",
+            "Total parameters: 108866\n",
+            "\n",
+            "Predictions shape: torch.Size([5, 2])\n",
+            "Sample prediction: [0.521299 0.478701]\n"
+          ]
+        }
+      ],
       "source": [
         "# Building a sequential model\n",
         "classification_model = nn.Sequential(\n",
@@ -1291,15 +1404,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "OKkmDqN0POX4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sequential(\n",
+            "  (0): Linear(in_features=784, out_features=256, bias=True)\n",
+            "  (1): ReLU()\n",
+            "  (2): Linear(in_features=256, out_features=128, bias=True)\n",
+            "  (3): ReLU()\n",
+            "  (4): Linear(in_features=128, out_features=10, bias=True)\n",
+            "  (5): Softmax(dim=1)\n",
+            ")\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: create a sequential model called simple_classifier\n",
+        "# created a sequential model called simple_classifier\n",
+        "simple_classifier = nn.Sequential(\n",
+        "    nn.Linear(784, 256),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(256, 128),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(128, 10),\n",
+        "    nn.Softmax(dim=1)\n",
+        ")\n",
         "\n",
-        "# TODO: Print summaries\n"
+        "# Printed summaries\n",
+        "print(simple_classifier)\n"
       ]
     },
     {
@@ -1320,7 +1457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "vWk0DascPhpf"
       },
@@ -1345,11 +1482,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "dTkL-A0qQ-82"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model Architecture:\n",
+            "NeuralLabModel(\n",
+            "  (feature_extractor): Linear(in_features=50, out_features=128, bias=True)\n",
+            "  (relu): ReLU()\n",
+            "  (classifier): Linear(in_features=128, out_features=5, bias=True)\n",
+            "  (softmax): Softmax(dim=1)\n",
+            ")\n",
+            "\n",
+            "Total parameters: 7,173\n",
+            "feature_extractor.weight: torch.Size([128, 50])\n",
+            "feature_extractor.bias: torch.Size([128])\n",
+            "classifier.weight: torch.Size([5, 128])\n",
+            "classifier.bias: torch.Size([5])\n"
+          ]
+        }
+      ],
       "source": [
         "class NeuralLabModel(nn.Module):\n",
         "    def __init__(self, hidden_units, num_classes):\n",
@@ -1439,7 +1596,10 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Create ResearchNetwork"
+        "# TODO: Create ResearchNetwork\n",
+        "\n",
+        "class ResearchNetwork(nn.Module):\n",
+        "    "
       ]
     },
     {
